--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                 <div class="sleigh-runner"></div>
             </div>
         </div>
+        <audio id="background-music" loop>
+            <source src="home-for-christmas-278994.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <div id="music-control" class="music-control">
+            <button id="toggle-music">🔇</button>
+        </div>
     </section>
     
     <script src="script.js"></script>
