--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <audio id="background-music" loop>
-            <source src="home-for-christmas-278994.mp3" type="audio/mpeg">
+            <source src="src\home-for-christmas-278994.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div id="music-control" class="music-control">
